# crfc-starter-robot

./: .gitmodules  CMakeLists.txt  README.md  app_version.h  bt_hid.c  bt_hid.h  main_app.c  motor_driver.c  motor_driver.h  pin_definitions.h
.github/workflows/: cmake-single-platform.yml
releases/: main_app_v1.0.0.uf2
